# Wheelson-Firmware

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win  README.md  Truckr.ino  Wheelson-Firmware.ino
data/: add.raw  app_kuglica.raw  app_qr.raw  arrow_up.raw  battery_0.raw  battery_1.raw  battery_2.raw  battery_3.raw  battery_4.raw  border.raw  chargingIcon.raw  color.raw  freq.raw  intro.g565.hs  light_on.raw  mainmenu_bg.raw.hs  time.raw  tone.raw  tune.raw  volume.raw
data/AutoDrive/: engine.bw  engine.raw  posto.raw  raw_bg.raw.hs
data/Battery/: low.raw  off.raw
data/MainMenu/: app_autonomous.raw  app_remote.raw  app_settings.raw  app_simple.raw  mainmenu_border.raw
data/RemoteControl/: bg.raw.hs  wheel-cross.raw  wheel.raw
data/Setts/: settings_bg.raw.hs
data/Simple/: actionBorder.raw  add.raw  add_button.raw  arrow_down.raw  arrow_left.raw  arrow_right.raw  border15x15.raw  delete_button.raw  light_off.raw  light_on.raw  pause.raw  playback_bg.raw.hs  simple_edit_bg.raw.hs
src/: Fonts.cpp  Fonts.h  HWTestSPIFFS.hpp  HardwareTest.cpp  HardwareTest.h  IntroScreen.cpp  IntroScreen.h  MainMenu.cpp  MainMenu.h  Wheelson.h  defs.hpp  mem.cpp  mem.h
src/Apps/Autonomous/: Autonomous.h  AutonomousDriving.cpp  BallDriver.h  DrivingElement.cpp  LineDriver.cpp  LineDriver.h  MarkerDriver.cpp  MarkerDriver.h
src/Apps/AutonomousDriving/: autonomousApp.cpp  autonomousApp.h  autonomousSettings.cpp  autonomousSettings.h
src/Apps/AutonomousDrivingApp/: AutonomousDriving.cpp  AutonomousDriving.h  BallDriver.cpp  BallDriver.h  DrivingElement.cpp  DrivingElement.h  LineDriver.cpp  LineDriver.h  MarkerDriver.cpp  MarkerDriver.h
src/Apps/MainMenu/: MainMenu.cpp  MainMenu.h  MainMenuApp.cpp  MainMenuApp.h  MainMenuItem.cpp  MainMenuItem.h
src/Apps/RemoteControl/: Connection.cpp  Connection.h  RCDataCom.cpp  RCDataCom.h  RCDriver.cpp  RCDriver.h  RemoteControl.cpp  RemoteControl.h
src/Apps/Settings/: BooleanElement.cpp  BooleanElement.h  DescreteSlider.cpp  DescreteSlider.h  DiscreteSlider.cpp  DiscreteSlider.h  SettingsElement.cpp  SettingsElement.h  SettingsScreen.cpp  SettingsScreen.h  SliderElement.cpp  SliderElement.h  TextElement.cpp  TextElement.h
src/Apps/Simple/: ActionSelector.cpp  ActionSelector.h  Edit.cpp  Edit.h  EditModal.cpp  Playback.cpp  Simple.cpp  Simple.h  Storage.h
src/Apps/Simple/Elements/: ActionElement.cpp  ActionElement.h  AddIcon.cpp  EditModalItem.cpp  EditModalItem.h  ProgramElement.cpp  ProgramElement.h
src/Apps/SimpleProgramming/: Action.hpp  ActionSelector.cpp  ActionSelector.h  App.cpp  App.h  Edit.cpp  Edit.h  EditModal.cpp  EditModal.h  EditModal.hpp  Playback.cpp  Playback.h  PlaybackItem.cpp  PlaybackItem.h  Player.cpp  Player.h  ProgPlayer.cpp  ProgPlayer.h  ProgramList.cpp  ProgramList.h  SimpleAction.cpp  SimpleAction.h  SimpleEdit.cpp  SimpleEdit.h  SimplePlayback.cpp  SimplePlayback.hpp  SimpleProgramming.cpp  SimpleProgramming.h  Storage.cpp  Storage.h
src/Apps/SimpleProgramming/Elements/: ActionElement.cpp  ActionElement.h  AddIcon.cpp  AddIcon.hpp  EditModalItem.cpp  EditModalItems.cpp  EditModalItems.hpp  ProgramElement.cpp  ProgramElement.h  ProgramList.cpp  ProgramList.h
src/Apps/Timeline/: ActionEditor.cpp  ActionEditor.h  ActionSelector.cpp  ActionSelector.h  PatternEditor.cpp  PatternEditor.h  Timeline.cpp  Timeline.h  TimelineApp.cpp  TimelineApp.h
src/Apps/Timeline/Bitmaps/: actions.hpp  add.hpp  arrow_down.hpp  arrow_left.hpp  arrow_right.hpp  arrow_up.hpp  border.hpp  color.hpp  direction.hpp  freq.hpp  light_off.hpp  light_on.hpp  time.hpp  tone.hpp  tune.hpp  volume.hpp
src/BatteryPopup/: BatteryPopupService.cpp  BatteryPopupService.h  ShutdownPopup.cpp  WarningPopup.cpp  WarningPopup.h
src/Bitmaps/apps/: app_action.hpp  app_autonomous.hpp  app_qr.hpp  app_settings.hpp  app_tracking.hpp  apps.hpp
src/Components/: ActionProcessor.cpp  ActionProcessor.h  AutoAction.cpp  AutoAction.h  CameraFeed.cpp  CameraFeed.h  CameraProcessor.cpp  CameraProcessor.h  Driver.cpp  Driver.h  ImageProc.cpp  ImageProc.h  Motors.cpp  Motors.h  SkeletonTracer.cpp  SkeletonTracer.h  StreamServer.cpp  StreamServer.h  trace_skeleton.cpp
src/Elements/: ActionEditItem.cpp  ActionEditItem.h  ActionItem.cpp  ActionItem.h  Fleha.hpp  ModalBackground.hpp
src/HardwareTest/: BtnTestElement.cpp  HardwareTest.cpp  HardwareTest.h
src/Services/BatteryPopupService/: BatteryPopupService.cpp  BatteryPopupService.h  ShutdownPopup.cpp  ShutdownPopup.h  WarningPopup.cpp  WarningPopup.h
src/UserHWTest/: BtnTestElement.h  CameraHWTest.cpp  CameraHWTest.h  HWTestPart.cpp  HWTestPart.h  InputHWTest.cpp  InputHWTest.h  LEDHWTest.cpp  LEDHWTest.h  MotorHWTest.cpp  MotorHWTest.h  UserHWTest.cpp  UserHWTest.h
